# JsonKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: rules.md  test-cases.md
examples/: CMakeLists.txt  main.c
include/: json.h  value.h
src/: CMakeLists.txt  iterator.cpp  json_internal.h  value.cc
src/internal/: iterator.h
tests/: CMakeLists.txt  json-tests.cc  value-tests.cc  value.cc
